1)Re-arrange flexbox properties within header selector. 2)Target img element and set padding top and height in order to lower avatar down and fix prior issue of part of it being covered by the nav bar. 3)Target h2 element and set margin to 0 to remove the margin top and bottom values that were there before. This moved the h2 with the name lower down and helped fix the avatar being covered issue.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,10 +2,19 @@ header {
   height: 400px;
   width: 100%;
   display: flex;
-  align-items: center;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: #334354;
   background-image: url("https://www.transparenttextures.com/patterns/old-husks.png");
+}
+
+img {
+  padding-top: 4.5em;
+  height: 300px;
+}
+
+h2 {
+  margin: 0;
 }
 
